services/ingress-nginx/example/reuse-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingresse-test
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  # ingressClassName: nginx
  rules:
  - host: test.anthonycornell.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myApp
            port:
              number: 80
